# Automatique

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  chronicles.cpp  chronicles.h  command.h  commands.cpp  commands.h  control_block.hpp  control_module.hpp  coverage.sh  cxdate.hpp  cxhash.hpp  discovery_module.cpp  discovery_module.h  future_combine.hpp  future_utils.hpp  main.cpp  operation.hpp  operation_queue.hpp  position.hpp  pretty_print.cpp  pretty_print.hpp  robot.cpp  robot.h  robot_dispatcher.h  tilecontent.h  traits.cpp  traits.h  unit.h  variant_utils.hpp  version.cpp  version.h  world.cpp  world.h
src/: chronicles.h  main.cpp  version.h  world.cpp  world.h
src/modules/: base_unit_control.h  control.hpp  core.hpp  discovery.cpp  discovery.h  mining.cpp  mining.h  warehouse.cpp  warehouse.h
src/primitives/: control_block.hpp  module_control.hpp  operation.h  operation_queue.hpp
src/traits/: common.hpp  discover.cpp  discover.hpp  mine.cpp  mine.hpp  move.cpp  move.hpp
src/types/: id.h  optref.hpp  position.hpp  resourcetype.h  tags.h
src/units/: basic.h  carrier.h
src/utils/: algorithm.hpp  cxhash.hpp  future.hpp  future_combine.hpp  pretty_print.cpp  pretty_print.hpp
tests/: CMakeLists.txt  main.cpp  unit_operation_queue.cpp  unit_position.cpp  unit_world.cpp
